--- a/sketch-mail/2019-22.md
+++ b/sketch-mail/2019-22.md
@@ -21,4 +21,4 @@ De volta usando [pyp5js](https:/github.com/berinhard/pyp5js), ferramenta maravil
 
 Nas últimas semanas ensinei um pouco de Arduino + Processing em uma atividade com o objetivo de construir um disparador de vídeos, algo como uma "video jukebox". Código em [github.com/villares/Processing-video-jukebox](http://github.com/villares/Processing-video-jukebox).
 
-Dos podcasts que eu escuto, este é um dos meus favoritos: The Life Scientific [www.bbc.co.uk/programmes/p07dg3wm](https://www.bbc.co.uk/programmes/p07dg3wm).
+Dos podcasts que eu escuto, este é um dos meus favoritos: The Life Scientific [www.bbc.co.uk/programmes/b015sqc7](https://www.bbc.co.uk/programmes/b015sqc7).
