--- a/sketch-mail/2019-24.md
+++ b/sketch-mail/2019-24.md
@@ -25,6 +25,6 @@ Terça no Garoa teremos o [Yorik van Havre mostrando programação para o FreeCA
 
 Estão ainda abertas as inscrições para as últimas vagas do meu curso de Processing modo Python para designers, 30h, segundas e quartas das 18h30 às 21h30, com início em 12 de agosto (mais informações  em [plato.studio/7-cursos-oficinas](https://plato.studio/7-cursos-oficinas)).
 
-*Indicação de podcast: [Talk Python to me](https://talkpython.fm/)* 
+Indicação de podcast: [Talk Python to me](https://talkpython.fm/) 
 
 #### 
