--- a/sketch-mail/2019-24.md
+++ b/sketch-mail/2019-24.md
@@ -19,12 +19,10 @@
 
 #### Português
 
-Depois de uma pausa maior do que o de costume, e mini-férias, eu não tenho muito a relatar. Estou di volta a grades 3D mas acho que vou voltar aos sólidos 3D em breve.
+Depois de uma pausa maior do que o de costume, e mini-férias, eu não tenho muito a relatar. Estou de volta a grades 2D mas acho que vou voltar aos sólidos 3D em breve.
 
 Terça no Garoa teremos o [Yorik van Havre mostrando programação para o FreeCAD](https://garoa.net.br/wiki/Programando_para_o_FreeCAD), não vejo a hora de ver.
 
 Estão ainda abertas as inscrições para as últimas vagas do meu curso de Processing modo Python para designers, 30h, segundas e quartas das 18h30 às 21h30, com início em 12 de agosto (mais informações  em [plato.studio/7-cursos-oficinas](https://plato.studio/7-cursos-oficinas)).
 
 Indicação de podcast: [Talk Python to me](https://talkpython.fm/) 
-
-#### 
