link para Algorave

--- a/sketch-mail/2019-26.md
+++ b/sketch-mail/2019-26.md
@@ -22,7 +22,6 @@ Estou achando que isto aqui está ficando mais para duas vezes por mês que uma 
 
 Experimentando com recursão. Impressionado e inspirado por [um tweet de @takawo](https://twitter.com/villares/status/1164921305277325314) da comunidade Processing no Japão! Eles tem esse hashtag incrível [#つぶやきProcessing](https://twitter.com/hashtag/%E3%81%A4%E3%81%B6%E3%82%84%E3%81%8DProcessing?src=hashtag_click) (algo como Processing em um tweet). 
 
-Domingo agora no Garoa o Bernardo Fontes, Gil FUser e mais um pessoal que esteve na Noite de Processing vão agitar uma Algarve, entre 17h e 22h.
+Domingo agora o Bernardo Fontes, Gil FUser e mais um pessoal que esteve na Noite de Processing vão agitar uma [Algorave no Garoa](https://garoa.net.br/wiki/Algorave), entre 17h e 22h.
 
 Indicação de podcast: [99% Invisible](https://99percentinvisible.org/), principalmente sobre design e curiosidades. 
-
