--- a/sketch-mail/2019-27.md
+++ b/sketch-mail/2019-27.md
@@ -10,7 +10,7 @@
 
 *It took me too long to start organizing my [Paper objects with Processing and Python](https://github.com/villares/Paper-objects-with-Processing-and-Python) repository but it got started*.
 
-*My lecture proposal for Python Brasil (Brazilian PyCon) in October was accepted! Yay! Learning and teaching Python for "[alternative arogrammers](https://dl.acm.org/citation.cfm?doid=2384592.2384594)"*
+*My lecture proposal for Python Brasil (Brazilian PyCon) in October was accepted! Yay! Learning and teaching Python for "[alternative programmers](https://dl.acm.org/citation.cfm?doid=2384592.2384594)"*
 
 *From the podcasts I enjoy: [Little Atoms](), Niel Denny on 'ideas and culture'.*
 
