--- a/sketch-mail/2019-15.md
+++ b/sketch-mail/2019-15.md
@@ -1,12 +1,9 @@
- May 01, 2019 
 
 #  #15-2019 
 
- by [villares](https://twitter.com/villares) 
+![image](/assets/2019-15-sketch.png)
 
-
-
-
+## Inglês
 
 Last week on sketch-a-day I tried some patterns based on 4 quaternary digits (256 variations). Lot's of unfinished stuff:
 
@@ -18,11 +15,9 @@ Last week on sketch-a-day I tried some patterns based on 4 quaternary digits (25
 
 - Development of my Processing poly editor halted.
 
-
-
 PS: An update on the DesignByNumbers-alphabet, Maeda commented onTwitter that the letters were designed by Peter Cho!
 
-
+## Português
 
 Na última semana de sketch-a-day eu tentei alguns padrões baseados em 4 dígitos quaternários (256 variações). Muitas coisas inacabadas:
 
@@ -36,4 +31,4 @@ Na última semana de sketch-a-day eu tentei alguns padrões baseados em 4 dígi
 
 PS: Uma atualização sobre o DesignByNumbers-alphabet, Maeda comentou no Twitter que as letras foram desenhadas por Peter Cho!
 
-​       
+​[01/052019]
