--- a/sketch-mail/2019-16.md
+++ b/sketch-mail/2019-16.md
@@ -1,13 +1,12 @@
- May 09, 2019 
 
 #  [sketch-mail] #16-2019 
 
+ [![img](assets/16-2019-sketch.png)](https://abav.lugaralgum.com/sketch-a-day/2019/sketch_190507a/index.html)
 
-
- [![img](https://gallery.tinyletterapp.com/da0c0ddce7154c8aab687709cc9ac304c6e51b5f/images/c4bb30bc-0917-4385-b2b1-32e1ffbf680d.png)](https://abav.lugaralgum.com/sketch-a-day/2019/sketch_190507a/index.html)Link: https://abav.lugaralgum.com/sketch-a-day/2019/sketch_190507a/index.html
+ Link: https://abav.lugaralgum.com/sketch-a-day/2019/sketch_190507a/index.html
 
  *Last week I started to play with Bernardo's new **pyp5js**  tool that transpiles Python code to JavaScript + p5.js (from the  Processing Foundation). So I can write Python and share sketches to be  seen on the browser.*
 
  Semana passada eu comecei a brincar com a nova ferramenta desenvolvida pelo Bernardo, [**pyp5js,**](http://github.com/berinhard/pyp5js) que transpila Python para Javascript + p5.js (da Fundação Processing). Permitindo escrever Python e compartilhar *sketches* para serem vistos no browser. 
 
-  
+[09/05/2019]
