--- a/sketch-mail/2019-17.md
+++ b/sketch-mail/2019-17.md
@@ -1,11 +1,13 @@
 
-#  [sketch-mail] #17-2019 -  May 15, 2019 
+#  [sketch-mail] #17-2019  
 
-*![img](https://gallery.tinyletterapp.com/da0c0ddce7154c8aab687709cc9ac304c6e51b5f/images/fdfa6da3-efe6-4255-b812-5a6dd019ce1a.gif) 
+*![img](/assets/2019-17-sketch.gif) 
 
  I'm reworking some sketches from earlier this year in order to print them in two colors...  The official link to my dissertation at Unicamp's library may take some time, so I have uploaded a PDF here: https://abav.lugaralgum.com/mestrado/#taxonomy-of-themes-for-teaching-programming-in-a-visual-context*
  
  Estou retrabalhando alguns sketches anteriores para poder imprimir em duas cores...
 
 O link oficial para minha dissertação no repositório da Unicamp pode demorar um pouco ainda, então eu subi um PDF aqui: *https://abav.lugaralgum.com/mestrado/*
+
+[15/05/2019]
 
