--- a/sketch-mail/2019-18.md
+++ b/sketch-mail/2019-18.md
@@ -1,7 +1,7 @@
 
 #  [sketch-mail] #18-2019 -  May 25, 2019 
 
- [![click for bigger image](/Users/villares/villares.github.io/sketch-mail/assets/2019-18-sketch.png)]
+ [![click for bigger image](/assets/2019-18-sketch.png)]
 
 *Last week I tried out some combinatorics, first with a Processing  library but then with Python's itertools very simple generators. Also,  I'm very please with my 2-color risograph print.*
 
