sketch mail 2020-02 image
prints image

--- a/sketch-mail/2020-02.md
+++ b/sketch-mail/2020-02.md
@@ -1,4 +1,8 @@
 ---
+typora-copy-images-to: ./assets
+---
+
+---
 
 ## [sketch-mail] #02-2020 - [subscribe here!](/sketch-mail)
 
@@ -15,6 +19,8 @@ Yesterday [Noite de Processing](https://garoa.net.br/wiki/Noite_de_Processing) w
 I've got some sketches printed in photographic paper, and I'll send them **for people who contribute recurrently** at [gumroad.com/villares](https://gumroad.com/villares). I'll send a small 10x15cm print once if you choose the smaller *open educational resources* contribution or I'll send a monthly slightly bigger sketch for people on the *sketch-a-month* option.
 
 Listening to [CS-Ed Podcast](https://sites.duke.edu/csedpodcast/), great new show about teaching computer science with brilliant interviews. Amazing people like [Amy Ko](https://faculty.washington.edu/ajko/),  [Dan Garcia](https://www2.eecs.berkeley.edu/Faculty/Homepages/garcia.html), [David Malan](https://cs.harvard.edu/malan/) and [Mark Guzdial](https://www.si.umich.edu/people/mark-guzdial).
+
+![prints](https://abav.lugaralgum.com/sketch-mail/assets/prints.jpg)
 
 #### Português
 
