--- a/pensando-amanhas/1.md
+++ b/pensando-amanhas/1.md
@@ -1,6 +1,8 @@
 # Capa - pode um robô ser racista?
 
-O código abaixo é a parte principal do código que gera as capas deste título da coleção *pensando amanhãs* do Museu do Amanhã.
+![exemplo e imagem da capa](1.png)
+
+O código abaixo é a parte principal do código que gera as imagens nas capas deste título da coleção *pensando amanhãs* do Museu do Amanhã. Cada capa tem um desenho diferente, baseando em uma semente pseudo-aleatória diferente.
 
 ```python
 import py5
