--- a/pensando-amanhas/1.md
+++ b/pensando-amanhas/1.md
@@ -5,7 +5,7 @@
 O código abaixo é a parte principal do código que gera as imagens nas capas deste título da coleção *pensando amanhãs* do Museu do Amanhã. Cada capa tem um desenho diferente, baseando em uma semente pseudo-aleatória diferente.
 
 ```python
-import py5
+import py5  # https://py5coding 
 import random
 
 # random seed (semente para os "sorteios" pseudo-aleatórios)
