--- a/pensando-amanhas/3.md
+++ b/pensando-amanhas/3.md
@@ -1,6 +1,6 @@
-# Capa - pode um robô ser racista?
+# Capa - Viver mais significa viver bem?
 
-![exemplo e imagem da capa](1.png)
+![exemplo e imagem da capa](3.png)
 
 O código abaixo é a parte principal do código que gera as imagens nas capas deste título da coleção [*pensando amanhãs*](../) do Museu do Amanhã. Cada capa tem um desenho diferente, baseando em uma semente pseudo-aleatória diferente.
 
