--- a/pensando-amanhas/1.md
+++ b/pensando-amanhas/1.md
@@ -2,7 +2,7 @@
 
 ![exemplo e imagem da capa](1.png)
 
-O código abaixo é a parte principal do código que gera as imagens nas capas deste título da coleção [*pensando amanhãs*](/) do Museu do Amanhã. Cada capa tem um desenho diferente, baseando em uma semente pseudo-aleatória diferente.
+O código abaixo é a parte principal do código que gera as imagens nas capas deste título da coleção [*pensando amanhãs*](/README.md) do Museu do Amanhã. Cada capa tem um desenho diferente, baseando em uma semente pseudo-aleatória diferente.
 
 ```python
 import py5  # https://py5coding 
