--- a/pensando-amanhas/3.md
+++ b/pensando-amanhas/3.md
@@ -2,7 +2,7 @@
 
 ![exemplo e imagem da capa](3.png)
 
-O código abaixo é a parte principal do código que gera as imagens nas capas deste título da coleção [*pensando amanhãs*](/) do Museu do Amanhã. Cada capa tem um desenho diferente, baseando em uma semente pseudo-aleatória diferente.
+O código abaixo é a parte principal do código que gera as imagens nas capas deste título da coleção [*pensando amanhãs*](/README.md) do Museu do Amanhã. Cada capa tem um desenho diferente, baseando em uma semente pseudo-aleatória diferente.
 
 ```python
 # Originalmente este código cabia em um "tweet" #つぶやきProcessing
