--- a/pensando-amanhas/3.md
+++ b/pensando-amanhas/3.md
@@ -20,7 +20,7 @@ def draw():
     py5.fill(0)
     py5.rect(margem, margem, py5.width - margem * 2, py5.height - margem * 2)
     py5.color_mode(py5.HSB)
-    f =  0 # use 'f = frame_count' para versão animada
+    f =  0 # use 'f = py5.frame_count' para versão animada
     x = margem
     while x < py5.width - margem:
         y = margem
